# symmetria-core

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
symmetria/: README.md
tests/: README.md
